easy_busy/k8s/local/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: easybuy
  labels:
    name: easybuy
