easy_busy/k8s/local/05-spring-cloud-infra.yml
#discovery service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-discovery
  namespace: easybuy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-discovery
  template:
    metadata:
      labels:
        app: service-discovery
    spec:
      containers:
        - name: service-discovery
          image: batchlcwd/service-discovery:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
              name: eureka
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8761
            initialDelaySeconds: 40
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8761
            initialDelaySeconds: 25
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: service-discovery
  namespace: easybuy
spec:
  ports:
    - port: 8761
  selector:
    app: service-discovery

---
#config service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: easybuy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: batchlcwd/config-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8079
              name: config
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8079
            initialDelaySeconds: 40
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8079
            initialDelaySeconds: 25
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: easybuy
spec:
  ports:
    - port: 8079
  selector:
    app: config-server
